@@ -21,18 +21,28 @@
 package cascading.tuple.hadoop.util;
 
 import java.util.Comparator;
+import java.util.List;
 
+import cascading.tuple.Hasher;
+import cascading.tuple.Tuple;
 import cascading.tuple.hadoop.TupleSerialization;
 import cascading.tuple.util.TupleHasher;
 import org.apache.hadoop.mapred.JobConf;
 import org.apache.hadoop.mapred.JobConfigurable;
 
 /**
- *
+ * Super class of all Hadoop partitioners.
+ * <p/>
+ * As of Cascading 2.7 the hashing used to calculate partitions has been changed to use Murmur3. Users that rely on the
+ * old behaviour should set {@link cascading.tuple.hadoop.util.HasherPartitioner#HASHER_PARTITIONER_USE_LEGACY_HASH} to
+ * {@code true}.
  */
 public class HasherPartitioner extends TupleHasher implements JobConfigurable
   {
+  public final static String HASHER_PARTITIONER_USE_LEGACY_HASH = "cascading.tuple.hadoop.util.hasherpartitioner.uselegacyhash";
+
   private static Comparator defaultComparator;
+
   private Comparator[] comparators;
 
   public void configure( JobConf jobConf )
@@ -41,6 +51,25 @@ public class HasherPartitioner extends TupleHasher implements JobConfigurable
 
     comparators = DeserializerComparator.getFieldComparatorsFrom( jobConf, "cascading.group.comparator" );
 
+    if( jobConf.getBoolean( HASHER_PARTITIONER_USE_LEGACY_HASH, false ) )
+      this.hashFunction = new LegacyHashFunction();
+
     initialize( defaultComparator, comparators );
+    }
+
+  static class LegacyHashFunction extends TupleHasher.HashFunction
+    {
+    @Override
+    public int hash( Tuple tuple, Hasher[] hashers )
+      {
+      int hash = 1;
+      List<Object> elements = Tuple.elements( tuple );
+      for( int i = 0; i < elements.size(); i++ )
+        {
+        Object element = elements.get( i );
+        hash = 31 * hash + ( element != null ? hashers[ i % hashers.length ].hashCode( element ) : 0 );
+        }
+      return hash;
+      }
     }
   }
